--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif;
 */
 
-/* Main hope page-index */
+/* Main home page-index */
 .body {
    background-color: var(--backgroundmain); 
    font-family: 'Roboto', sans-serif;
